--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,7 +14,7 @@
     <% logger.debug "In nav view - action_name: #{action_name}" %>
     <% if controller_name != 'registrations' && (controller_name != 'listings' || action_name != 'show') %>
       <ul class="nav-item">
-        <%= form_for listings_path, method: :get, :html => {:class => 'form-inline my-2 my-lg-0 mr-lg-2'} do |f| %>
+        <%= form_for listings_path, method: :get, :html => {:class => 'form-inline my-2 my-lg-0 mr-lg-2'} do |_| %>
             <div class="input-group">
 
             <%= text_field_tag :search, params[:search], class: 'form-control search-bar' %>
