--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -13,17 +13,19 @@
     <% logger.debug "In nav view - current_name: #{controller_name}" %>
     <% logger.debug "In nav view - action_name: #{action_name}" %>
     <% if controller_name != 'registrations' && (controller_name != 'listings' || action_name != 'show') %>
-      <ul class="nav-item">
-        <%= form_for listings_path, method: :get, :html => {:class => 'form-inline my-2 my-lg-0 mr-lg-2'} do |f| %>
-            <div class="input-group">
+      <% if user_signed_in? %>
+        <ul class="nav-item">
+          <%= form_for listings_path, method: :get, :html => {:class => 'form-inline my-2 my-lg-0 mr-lg-2'} do |f| %>
+              <div class="input-group">
 
-            <%= text_field_tag :search, params[:search], class: 'form-control search-bar' %>
-            <%= button_tag type: 'submit' , class: 'btn btn-primary search-btn' do  %>
-                <i class="glyphicon glyphicon glyphicon-search"></i>
-                <% end %>
-            </div>
-        <% end %>
-      </ul>
+              <%= text_field_tag :search, params[:search], class: 'form-control search-bar' %>
+              <%= button_tag type: 'submit' , class: 'btn btn-primary search-btn' do  %>
+                  <i class="glyphicon glyphicon glyphicon-search"></i>
+                  <% end %>
+              </div>
+          <% end %>
+        </ul>
+      <% end %>
     <% end %>
 
       <ul class="navbar-nav ml-auto">
