--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,11 +29,11 @@
     <div class="col-lg-9">
 
       <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-        <ol class="carousel-indicators">
+        <!-- <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
+        </ol> -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
             <%= last_picture %>
@@ -76,4 +76,3 @@
 </body>
 
 </html>
-
