--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -3,8 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body {
-  background: image-url('background.jpg') no-repeat center;
-  background-size: cover;
+  background: image-url('background.jpg') ;
 }
 
 .modal {
