--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,11 +11,10 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
 
     <% logger.debug "In nav view - current_name: #{controller_name}" %>
-    <% logger.debug "In nav view - action_name: #{action_name}" %>
-    <% if controller_name != 'registrations' && (controller_name != 'listings' || action_name != 'show') %>
-      <% if user_signed_in? %>
+    <% logger.debug "In nav view - action_name: #{action_name} and #{action_name == :new}" %>
+      <% if user_signed_in? && action_name != :new || %>
         <ul class="nav-item">
-          <%= form_for listings_path, method: :get, :html => {:class => 'form-inline my-2 my-lg-0 mr-lg-2'} do |_| %>
+          <%= form_tag listings_path, method: :get, :class => 'form-inline my-2 my-lg-0 mr-lg-2' do |_| %>
               <div class="input-group">
 
               <%= text_field_tag :search, params[:search], class: 'form-control search-bar' %>
@@ -25,7 +24,6 @@
               </div>
           <% end %>
         </ul>
-      <% end %>
     <% end %>
 
       <ul class="navbar-nav ml-auto">
